bugs squished

--- a/style.css
+++ b/style.css
@@ -107,7 +107,6 @@ ul {
 }
 .dexContainer, #leftDexContainer {
     display:flex;
-    /* flex-direction: center; */
     border: 3px solid black;
     position:absolute;
     width: 600px;
@@ -119,7 +118,6 @@ ul {
 .dexBorder{
     height: 640px;
     width: 580px;
-    /* clip-path: polygon(43% 32%, 64% 0, 100% 0, 100% 100%, 0 100%, 0 33%); */
     border:2px solid black;
     position: absolute;
     top: 100px;
@@ -203,7 +201,7 @@ ul {
     width: 200px;
     height: 200px;
     position: relative;
-    top: -320px;
+    top: -260px;
     left: 180px;
     visibility:hidden;
     color: green;
@@ -526,6 +524,8 @@ left: 250px;
     position: absolute;
     top: 80px;
 }
+
+
 /* overhang / hinge info */
 .overhangContainer {
 width:100px;
@@ -576,6 +576,8 @@ left: 10px;
     position: absolute;
     right: 0px;
 }
+
+
 /* Right side of Pokedex Code */
 #rightSideContainer{
     position:absolute;
